--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,7 @@ img {
 .header-container {
   display: flex;
   align-items: center;
+  height: 70px;
 }
 .header-list {
   display: flex;
